2003-06-10  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-h8300.c (h8300sxnmode): New.
	(md_pseudo_table): Add .h8300sxn entry.

2003-06-09  H.J. Lu <hongjiu.lu@intel.com>

	* NEWS: Updated for the new -n option for the i386 assembler.

	* config/tc-i386.c (optimize_align_code): New.
	(md_shortopts): Add 'n'.
	(md_parse_option): Handle 'n'.
	(md_show_usage): Add '-n'.

	* config/tc-i386.h (optimize_align_code): Declared.
	(md_do_align): Optimize code alignment only if optimize_align_code
	is not 0.

	* doc/as.texinfo: Add the new -n option.

	* doc/c-i386.texi: Document the new -n option.

2003-06-07  Richard Henderson  <rth@redhat.com>

	* doc/as.texinfo: Document .cfi_rel_offset.

	* dw2gencfi.c (struct cfa_save_data, cfa_save_stack): New.
	(cfi_add_CFA_offset): Detect invalid offsets.
	(cfi_add_CFA_remember_state): Save cur_cfa_offset.
	(cfi_add_CFA_restore_state): Restore it.
	(CFI_rel_offset): New.
	(cfi_pseudo_table): Add it.
	(dot_cfi): Handle it.

2003-06-07  H.J. Lu <hongjiu.lu@intel.com>

	* app.c (do_scrub_chars): Add states 14 and 15 to handle
	predicate for ia64.

2003-06-05  Michael Snyder  <msnyder@redhat.com>

	* config/tc-h8sx.c (get_specific): Distinguish h8h from h8s ops.
	(build_bytes): Ditto.

2003-06-05  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-h8sx.c (DMODE): Remove.
	(colonmod24): Don't choose a default if the operand is a 16-bit
	constant integer.
	(fix_operand_size): New function.
	(md_assemble): Use it to choose between @(d:2, ERn) and @(d:16,ERn).
	Adjust @(d:2,ERn) operands before choosing the specific opcodes.

2003-06-05  Michal Ludvig  <mludvig@suse.cz>

	* dw2gencfi.c (cfi_add_CFA_insn, cfi_add_CFA_insn_reg)
	(cfi_add_CFA_insn_reg_reg, cfi_add_CFA_insn_reg_offset): New.
	(cfi_add_CFA_offset, cfi_add_CFA_def_cfa)
	(cfi_add_CFA_register, cfi_add_CFA_def_cfa_register)
	(cfi_add_CFA_def_cfa_offset): Use cfi_add_CFA_insn_*().
	(cfi_add_CFA_restore, cfi_add_CFA_undefined)