@@ -1,0 +1,8 @@
+	.h8300sx
+	rts/l	er0
+	rts/l	er1-er1
+	rts/l	(er3)
+	rts/l	(er5-er5)
+	rts/l	er5-er6
+	rts/l	er3-er5
+	rts/l	(er1-er4)
