@@ -1,3 +1,8 @@
+2003-06-10  Richard Sandiford  <rsandifo@redhat.com>
+
+	* h8300-dis.c (bfd_h8_disassemble): Don't print brackets round
+	rts/l and rte/l register lists.
+
 2003-06-03  Nick Clifton  <nickc@redhat.com>
 
 	* frv-desc.c: Regenerate.
